kanc_pamoi/src/tests/sample_code/should_succeed/single_file/no_warnings/fun_recursion_right_label_wrong_order.k
// TODO: We'll need to move this file once we add
// misordered call arg warnings.

type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let foo = fun f(~-a: Nat, ~b: Nat): Nat {
    match a {
        o => Nat.o,
        s(a') => f(:b, a: a'),
    }
};
