kanc_pamoi/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/underscore_label/second_label_is_underscore.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let f = fun _(~x: Nat, ~_: Nat): Nat {
    Nat.o
};
